@@ -4,7 +4,7 @@
 Summary: The base set of packages for a mock chroot
 Name: buildsys-build
 Version: 0.7
-Release: 2%{?dist}
+Release: 1%{?dist}
 License: GPL
 Group: Development/Build Tools
 BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root
@@ -45,12 +45,12 @@ Requires: python
 %endif
 
 # RHEL block
-%if "%{?el}" != ""
+%if "%{?rhel}" != ""
 Requires: redhat-release
 Requires: coreutils
 Requires: elfutils
 Requires: redhat-rpm-config
-%if "%{?el}" == "4"
+%if "%{?rhel}" == "4"
 Requires: python
 %endif
 %endif
@@ -100,12 +100,22 @@ The base set of packages for a mock chroot.
 %files
 %defattr(-,root,root,-)
 %doc
-
 %changelog
-* Fri Aug 25 2006 Dennis Gilmore <dennis@ausil.us> - 0.7-2
+* Wed Jan  3 2007 Clark Williams <williams@redhat.com>
+- merged mock-0.6 BZ fixes to trunk
+
+* Thu Dec 14 2006 Clark Williams <williams@redhat.com>
+- added fix from David Lutterkort for RHEL
+- refactored some conditional blocks for simplicity
+- added this entry for Dennis Gilmore's aurora SPARC fixes
+
+* Tue Aug 29 2006 Clark Williams <williams@redhat.com>
+- added rhl buildsys-build rpms
+
+* Fri Aug 25 2006 Dennis Gilmore <dennis@ausil.us>
 - add aurora SPARC linux conditionals
 
-* Mon Aug  7 2006 Clark Williams <williams@redhat.com> - 0.7-1
+* Mon Aug  7 2006 Clark Williams <williams@redhat.com>
 - refactored conditional blocks for simplicity
 - bumped version to match mock
 
