@@ -56,7 +56,7 @@ Suppress most output
 \fB\-\-autocache\fR
 Turn on build-root caching
 .TP
-\fB\-\-rebuildcach\fR
+\fB\-\-rebuildcache\fR
 Force rebuild of build-root cache
 .TP 
 \fB\-\-help\fR
