@@ -9,7 +9,3 @@ install:
 	for item in *.cfg; do \
 		install -m 644 $$item $(DESTDIR)/etc/mock/$$item; \
 	done
-	for arch in i386 ppc x86_64 ; do \
-		ln -sv fedora-6-$$arch-core.cfg  $(DESTDIR)/etc/mock/fedora-development-$$arch-core.cfg; \
-	done
-
