@@ -3,8 +3,8 @@ import os
 config_opts['root'] = 'fedora-1-i386-core'
 config_opts['target_arch'] = 'i386'
 config_opts['runuser'] = '/bin/su'
-
 config_opts['yum.conf'] = """
+
 [main]
 cachedir=/var/cache/yum
 debuglevel=1
