@@ -4,6 +4,7 @@ config_opts['root'] = 'fedora-2-i386-core'
 config_opts['target_arch'] = 'i386'
 config_opts['runuser'] = '/bin/su'
 
+
 config_opts['yum.conf'] = """
 [main]
 cachedir=/var/cache/yum
