@@ -19,11 +19,11 @@ assumeyes=1
 
 [core]
 name=core
-mirrorlist=http://fedora.redhat.com/download/mirrors/fedora-core-3
+baseurl=http://download.fedoraproject.org/pub/fedora/linux/core/3/i386/os
 
 [updates-released]
 name=updates
-mirrorlist=http://fedora.redhat.com/download/mirrors/updates-released-fc3
+baseurl=http://download.fedoraproject.org/pub/fedora/linux/core/updates/3/i386
 
 
 [groups]
@@ -32,11 +32,12 @@ baseurl=http://buildsys.fedoraproject.org/buildgroups/3/i386/
 
 [extras]
 name=extras
-mirrorlist=http://fedora.redhat.com/download/mirrors/fedora-extras-3
+baseurl=http://download.fedoraproject.org/pub/fedora/linux/extras/3/i386
 
 [local]
 name=local
 baseurl=http://buildsys.fedoraproject.org/plague-results/fedora-3-extras/
+exclude=*.x86_64 *.ppc
 """
 
 
