@@ -20,11 +20,11 @@ assumeyes=1
 
 [core]
 name=core
-mirrorlist=http://fedora.redhat.com/download/mirrors/fedora-core-4
+baseurl=http://download.fedoraproject.org/pub/fedora/linux/core/4/i386/os
 
 [updates-released]
 name=updates
-mirrorlist=http://fedora.redhat.com/download/mirrors/updates-released-fc4
+baseurl=http://download.fedoraproject.org/pub/fedora/linux/core/updates/4/i386
 
 
 [groups]
@@ -33,12 +33,12 @@ baseurl=http://buildsys.fedoraproject.org/buildgroups/4/i386/
 
 [extras]
 name=extras
-mirrorlist=http://fedora.redhat.com/download/mirrors/fedora-extras-4
+baseurl=http://download.fedoraproject.org/pub/fedora/linux/extras/4/i386
 
 [local]
 name=local
 baseurl=http://buildsys.fedoraproject.org/plague-results/fedora-4-extras/
-
+exclude=*.x86_64 *.ppc
 """
 
 
