@@ -20,11 +20,11 @@ exclude=*.ppc64
 
 [core]
 name=core
-mirrorlist=http://fedora.redhat.com/download/mirrors/fedora-core-4
+baseurl=http://download.fedoraproject.org/pub/fedora/linux/core/4/ppc/os
 
 [updates-released]
 name=updates
-mirrorlist=http://fedora.redhat.com/download/mirrors/updates-released-fc4
+baseurl=http://download.fedoraproject.org/pub/fedora/linux/core/updates/4/ppc
 
 [groups]
 name=groups
@@ -32,12 +32,12 @@ baseurl=http://buildsys.fedoraproject.org/buildgroups/4/ppc/
 
 [extras]
 name=extras
-mirrorlist=http://fedora.redhat.com/download/mirrors/fedora-extras-4
+baseurl=http://download.fedoraproject.org/pub/fedora/linux/extras/4/ppc
 
 [local]
 name=local
 baseurl=http://buildsys.fedoraproject.org/plague-results/fedora-4-extras/
-
+exclude=*.i386 *.x86_64
 """
 
 
