@@ -20,12 +20,12 @@ exclude=[ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefhijklmnopqrstuvwxyz]*.i*86 g[abcdefghij
 
 [core]
 name=core
-mirrorlist=http://fedora.redhat.com/download/mirrors/fedora-core-4
+baseurl=http://download.fedoraproject.org/pub/fedora/linux/core/4/x86_64/os
 
 
 [updates-released]
 name=updates
-mirrorlist=http://fedora.redhat.com/download/mirrors/updates-released-fc4
+baseurl=http://download.fedoraproject.org/pub/fedora/linux/core/updates/4/x86_64
 
 [groups]
 name=groups
@@ -33,12 +33,13 @@ baseurl=http://buildsys.fedoraproject.org/buildgroups/4/x86_64/
 
 [extras]
 name=extras
+baseurl=http://download.fedoraproject.org/pub/fedora/linux/extras/4/x86_64
 mirrorlist=http://fedora.redhat.com/download/mirrors/fedora-extras-4
 
 [local]
 name=local
 baseurl=http://buildsys.fedoraproject.org/plague-results/fedora-4-extras/
-
+exclude=*.i386 *.ppc
 """
 
 
