@@ -20,11 +20,11 @@ assumeyes=1
 
 [core]
 name=core
-mirrorlist=http://fedora.redhat.com/download/mirrors/fedora-core-5
+mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=core-5&arch=i386
 
 [updates-released]
 name=updates
-mirrorlist=http://fedora.redhat.com/download/mirrors/updates-released-fc5
+mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=updates-released-fc5&arch=i386
 
 [groups]
 name=groups
@@ -32,12 +32,12 @@ baseurl=http://buildsys.fedoraproject.org/buildgroups/5/i386/
 
 [extras]
 name=extras
-mirrorlist=http://fedora.redhat.com/download/mirrors/fedora-extras-5
+mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=extras-5&arch=i386
 
 [local]
 name=local
 baseurl=http://buildsys.fedoraproject.org/plague-results/fedora-5-extras/
-
+exclude=*.x86_64 *.ppc
 """
 
 
