@@ -20,11 +20,11 @@ exclude=*.ppc64
 
 [core]
 name=core
-mirrorlist=http://fedora.redhat.com/download/mirrors/fedora-core-5
+mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=core-5&arch=ppc
 
 [updates-released]
 name=updates
-mirrorlist=http://fedora.redhat.com/download/mirrors/updates-released-fc5
+mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=updates-released-fc5&arch=ppc
 
 [groups]
 name=groups
@@ -32,12 +32,12 @@ baseurl=http://buildsys.fedoraproject.org/buildgroups/5/ppc/
 
 [extras]
 name=extras
-mirrorlist=http://fedora.redhat.com/download/mirrors/fedora-extras-5
+mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=extras-5&arch=ppc
 
 [local]
 name=local
 baseurl=http://buildsys.fedoraproject.org/plague-results/fedora-5-extras/
-
+exclude=*.i386 *.x86_64
 """
 
 
