@@ -21,11 +21,11 @@ exclude=[ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefhijklmnopqrstuvwxyz]*.i*86 g[abcdefghij
 
 [core]
 name=core
-mirrorlist=http://fedora.redhat.com/download/mirrors/fedora-core-5
+mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=core-5&arch=x86_64
 
 [updates-released]
 name=updates
-mirrorlist=http://fedora.redhat.com/download/mirrors/updates-released-fc5
+mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=updates-released-fc5&arch=x86_64
 
 [groups]
 name=groups
@@ -33,12 +33,12 @@ baseurl=http://buildsys.fedoraproject.org/buildgroups/5/x86_64/
 
 [extras]
 name=extras
-mirrorlist=http://fedora.redhat.com/download/mirrors/fedora-extras-5
+mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=extras-5&arch=x86_64
 
 [local]
 name=local
 baseurl=http://buildsys.fedoraproject.org/plague-results/fedora-5-extras/
-
+exclude=*.i386 *.ppc
 """
 
 
