@@ -1,0 +1,44 @@
+#!/usr/bin/python -tt
+import os
+config_opts['root'] = 'fedora-6-ppc-core'
+config_opts['target_arch'] = 'ppc'
+
+
+config_opts['yum.conf'] = """
+[main]
+cachedir=/var/cache/yum
+debuglevel=1
+reposdir=/dev/null
+logfile=/var/log/yum.log
+retries=20
+obsoletes=1
+gpgcheck=0
+assumeyes=1
+exclude=*.ppc64
+
+# repos
+
+[core]
+name=core
+mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=core-6&arch=ppc
+
+[updates-released]
+name=updates
+mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=updates-released-fc6&arch=ppc
+
+[groups]
+name=groups
+baseurl=http://buildsys.fedoraproject.org/buildgroups/6/ppc/
+
+[extras]
+name=extras
+mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=extras-6&arch=ppc
+
+[local]
+name=local
+baseurl=http://buildsys.fedoraproject.org/plague-results/fedora-6-extras/
+exclude=*.i386 *.x86_64
+"""
+
+
+
