@@ -1,6 +1,7 @@
 #!/usr/bin/python -tt
 import os
-config_opts['root'] = 'fedora-3-x86_64-core'
+
+config_opts['root'] = 'fedora-6-x86_64-core'
 config_opts['target_arch'] = 'x86_64'
 
 
@@ -8,35 +9,35 @@ config_opts['yum.conf'] = """
 [main]
 cachedir=/var/cache/yum
 debuglevel=1
-logfile=/var/log/yum.log
 reposdir=/dev/null
+logfile=/var/log/yum.log
 retries=20
 obsoletes=1
 gpgcheck=0
 assumeyes=1
 exclude=[ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefhijklmnopqrstuvwxyz]*.i*86 g[abcdefghijkmnopqrstuvwxyz]*.i?86 glib2.i?86 glib.i?86 *-devel.i?86
+
 # repos
 
 [core]
 name=core
-baseurl=http://download.fedoraproject.org/pub/fedora/linux/core/3/x86_64/os
-
+mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=core-6&arch=x86_64
 
 [updates-released]
 name=updates
-baseurl=http://download.fedoraproject.org/pub/fedora/linux/core/updates/3/x86_64
+mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=updates-released-fc6&arch=x86_64
 
 [groups]
 name=groups
-baseurl=http://buildsys.fedoraproject.org/buildgroups/3/x86_64/
+baseurl=http://buildsys.fedoraproject.org/buildgroups/6/x86_64/
 
 [extras]
 name=extras
-baseurl=http://download.fedoraproject.org/pub/fedora/linux/extras/3/x86_64
+mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=extras-6&arch=x86_64
 
 [local]
 name=local
-baseurl=http://buildsys.fedoraproject.org/plague-results/fedora-3-extras/
+baseurl=http://buildsys.fedoraproject.org/plague-results/fedora-6-extras/
 exclude=*.i386 *.ppc
 """
 
