@@ -20,7 +20,7 @@ assumeyes=1
 
 [core]
 name=core
-mirrorlist=http://fedora.redhat.com/download/mirrors/fedora-core-rawhide
+mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=rawhide&arch=i386
 
 [groups]
 name=groups
@@ -28,12 +28,12 @@ baseurl=http://buildsys.fedoraproject.org/buildgroups/development/i386/
 
 [extras]
 name=extras
-mirrorlist=http://fedora.redhat.com/download/mirrors/fedora-extras-devel
+mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=extras-devel&arch=i386
 
 [local]
 name=local
 baseurl=http://buildsys.fedoraproject.org/plague-results/fedora-development-extras/
-
+exclude=*.x86_64 *.ppc
 """
 
 
