@@ -20,7 +20,7 @@ exclude=*.ppc64
 
 [core]
 name=core
-mirrorlist=http://fedora.redhat.com/download/mirrors/fedora-core-rawhide
+mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=rawhide&arch=ppc
 
 [groups]
 name=groups
@@ -28,12 +28,12 @@ baseurl=http://buildsys.fedoraproject.org/buildgroups/development/ppc/
 
 [extras]
 name=extras
-mirrorlist=http://fedora.redhat.com/download/mirrors/fedora-extras-devel
+mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=extras-devel&arch=ppc
 
 [local]
 name=local
 baseurl=http://buildsys.fedoraproject.org/plague-results/fedora-development-extras/
-
+exclude=*.i386 *.x86_64
 """
 
 
