@@ -21,7 +21,7 @@ exclude=[ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefhijklmnopqrstuvwxyz]*.i*86 g[abcdefghij
 
 [core]
 name=core
-mirrorlist=http://fedora.redhat.com/download/mirrors/fedora-core-rawhide
+mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=rawhide&arch=x86_64
 
 [groups]
 name=groups
@@ -29,12 +29,12 @@ baseurl=http://buildsys.fedoraproject.org/buildgroups/development/x86_64/
 
 [extras]
 name=extras
-mirrorlist=http://fedora.redhat.com/download/mirrors/fedora-extras-devel
+mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=extras-devel&arch=x86_64
 
 [local]
 name=local
 baseurl=http://buildsys.fedoraproject.org/plague-results/fedora-development-extras/
-
+exclude=*.i386 *.ppc
 """
 
 
