@@ -2,7 +2,7 @@
 import os
 config_opts['root'] = 'redhat-73-i386'
 config_opts['target_arch'] = 'i386'
-
+config_opts['runuser'] = '/bin/su'
 
 config_opts['yum.conf'] = """
 [main]
